Fix the overflow

--- a/styles/components/BookTable/global.scss
+++ b/styles/components/BookTable/global.scss
@@ -10,6 +10,7 @@
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
+  overflow: hidden;
 }
 .main_content {
   position: relative;
